cmake_minimum_required(VERSION 2.8.7)

project( Reveal_Scenarios )

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

#SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})
#SET(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})

add_subdirectory( src )
